headers/signal_ffi.h

typedef struct SignalKyberPreKeyRecord SignalKyberPreKeyRecord;
typedef struct SignalPreKeyBundle SignalPreKeyBundle;
typedef struct SignalPreKeyRecord SignalPreKeyRecord;
typedef struct SignalPreKeySignalMessage SignalPreKeySignalMessage;
typedef struct SignalPrivateKey SignalPrivateKey;
/**
 * Represents a unique Signal client instance as `(<user ID>, <device ID>)` pair.
 */
typedef struct SignalProtocolAddress SignalProtocolAddress;
typedef struct SignalPublicKey SignalPublicKey;
typedef struct SignalSenderCertificate SignalSenderCertificate;
typedef struct SignalSenderKeyDistributionMessage SignalSenderKeyDistributionMessage;
typedef struct SignalSenderKeyMessage SignalSenderKeyMessage;
typedef struct SignalSenderKeyRecord SignalSenderKeyRecord;
typedef struct SignalServerCertificate SignalServerCertificate;
typedef struct SignalSessionRecord SignalSessionRecord;
/**
 * The top-level error type (opaquely) returned to C clients when something goes wrong.
 *
 * Ideally this would use [ThinBox][], and then we wouldn't need an extra level of indirection when
 * returning it to C, but unfortunately that isn't stable yet.
 *
 * [ThinBox]: https://doc.rust-lang.org/std/boxed/struct.ThinBox.html
 */
typedef struct SignalFfiError SignalFfiError;
typedef struct SignalMessage SignalMessage;
typedef struct SignalSignedPreKeyRecord SignalSignedPreKeyRecord;
typedef struct SignalUnidentifiedSenderMessageContent SignalUnidentifiedSenderMessageContent;
/**
 * A representation of a array allocated on the Rust heap for use in C code.
 */
typedef struct {
  unsigned char *base;
  /**
   * The number of elements in the buffer (not necessarily the number of bytes).
   */
  size_t length;
} SignalOwnedBuffer;
typedef struct {
  SignalProtocolAddress *raw;
} SignalMutPointerProtocolAddress;
typedef struct {
  SignalPrivateKey *raw;
} SignalMutPointerPrivateKey;
typedef struct {
  SignalPublicKey *raw;
} SignalMutPointerPublicKey;
typedef struct {
  const unsigned char *base;
  size_t length;
} SignalBorrowedBuffer;
typedef struct {
  const SignalPublicKey *raw;
} SignalConstPointerPublicKey;
typedef struct {
  SignalSessionRecord *raw;
} SignalMutPointerSessionRecord;
typedef struct {
  const SignalProtocolAddress *raw;
} SignalConstPointerProtocolAddress;
typedef struct {
  const SignalSessionRecord *raw;
} SignalConstPointerSessionRecord;
typedef struct {
  SignalPreKeyRecord *raw;
} SignalMutPointerPreKeyRecord;
typedef struct {
  const SignalPreKeyRecord *raw;
} SignalConstPointerPreKeyRecord;
typedef struct {
  SignalSignedPreKeyRecord *raw;
} SignalMutPointerSignedPreKeyRecord;
typedef struct {
  const SignalSignedPreKeyRecord *raw;
} SignalConstPointerSignedPreKeyRecord;
typedef struct {
  unsigned char *base;
  size_t length;
} SignalBorrowedMutableBuffer;
typedef struct {
  SignalPreKeyBundle *raw;
} SignalMutPointerPreKeyBundle;
typedef struct {
  const SignalPreKeyBundle *raw;
} SignalConstPointerPreKeyBundle;
typedef struct {
  SignalPreKeySignalMessage *raw;
} SignalMutPointerPreKeySignalMessage;
typedef struct {
  const SignalPreKeySignalMessage *raw;
} SignalConstPointerPreKeySignalMessage;
typedef struct {
  const SignalPrivateKey *raw;
} SignalConstPointerPrivateKey;
typedef struct {
  SignalSenderCertificate *raw;
} SignalMutPointerSenderCertificate;
typedef struct {
  const SignalSenderCertificate *raw;
} SignalConstPointerSenderCertificate;
typedef struct {
  SignalSenderKeyDistributionMessage *raw;
} SignalMutPointerSenderKeyDistributionMessage;
typedef struct {
  const SignalSenderKeyDistributionMessage *raw;
} SignalConstPointerSenderKeyDistributionMessage;
typedef struct {
  SignalSenderKeyMessage *raw;
} SignalMutPointerSenderKeyMessage;
typedef struct {
  const SignalSenderKeyMessage *raw;
} SignalConstPointerSenderKeyMessage;
typedef struct {
  SignalSenderKeyRecord *raw;
} SignalMutPointerSenderKeyRecord;
typedef struct {
  const SignalSenderKeyRecord *raw;
} SignalConstPointerSenderKeyRecord;
typedef struct {
  SignalServerCertificate *raw;
} SignalMutPointerServerCertificate;
typedef struct {
  const SignalServerCertificate *raw;
} SignalConstPointerServerCertificate;
typedef struct {
  SignalMessage *raw;
} SignalMutPointerSignalMessage;
typedef struct {
  const SignalMessage *raw;
} SignalConstPointerSignalMessage;
typedef struct {
  SignalKyberPreKeyRecord *raw;
} SignalMutPointerKyberPreKeyRecord;
typedef struct {
  const SignalKyberPreKeyRecord *raw;
} SignalConstPointerKyberPreKeyRecord;
typedef struct {
  SignalUnidentifiedSenderMessageContent *raw;
} SignalMutPointerUnidentifiedSenderMessageContent;
typedef SignalKeyPair SignalKyberKeyPair;
typedef struct {
  SignalKyberKeyPair *raw;
} SignalMutPointerKyberKeyPair;
typedef struct {
  const SignalKyberKeyPair *raw;
} SignalConstPointerKyberKeyPair;
typedef SignalPublicKey SignalKyberPublicKey;
typedef struct {
  SignalKyberPublicKey *raw;
} SignalMutPointerKyberPublicKey;
typedef struct {
  const SignalKyberPublicKey *raw;
} SignalConstPointerKyberPublicKey;
typedef SignalSecretKey SignalKyberSecretKey;
typedef struct {
  SignalKyberSecretKey *raw;
} SignalMutPointerKyberSecretKey;
typedef struct {
  const SignalKyberSecretKey *raw;
} SignalConstPointerKyberSecretKey;
/**
 * The fixed-width binary representation of a ServiceId.
 *
 * Rarely used. The variable-width format that privileges ACIs is preferred.
 */
typedef uint8_t SignalServiceIdFixedWidthBinaryBytes[17];
SignalFfiError *signal_pre_key_bundle_clone(SignalMutPointerPreKeyBundle *new_obj, SignalConstPointerPreKeyBundle obj);
SignalFfiError *signal_pre_key_record_destroy(SignalMutPointerPreKeyRecord p);
SignalFfiError *signal_pre_key_record_clone(SignalMutPointerPreKeyRecord *new_obj, SignalConstPointerPreKeyRecord obj);
SignalFfiError *signal_pre_key_signal_message_destroy(SignalMutPointerPreKeySignalMessage p);
SignalFfiError *signal_pre_key_signal_message_clone(SignalMutPointerPreKeySignalMessage *new_obj, SignalConstPointerPreKeySignalMessage obj);
SignalFfiError *signal_privatekey_destroy(SignalMutPointerPrivateKey p);
SignalFfiError *signal_privatekey_clone(SignalMutPointerPrivateKey *new_obj, SignalConstPointerPrivateKey obj);
SignalFfiError *signal_address_destroy(SignalMutPointerProtocolAddress p);
SignalFfiError *signal_address_clone(SignalMutPointerProtocolAddress *new_obj, SignalConstPointerProtocolAddress obj);
SignalFfiError *signal_publickey_destroy(SignalMutPointerPublicKey p);
SignalFfiError *signal_publickey_clone(SignalMutPointerPublicKey *new_obj, SignalConstPointerPublicKey obj);
SignalFfiError *signal_sender_certificate_destroy(SignalMutPointerSenderCertificate p);
SignalFfiError *signal_sender_certificate_clone(SignalMutPointerSenderCertificate *new_obj, SignalConstPointerSenderCertificate obj);
SignalFfiError *signal_sender_key_distribution_message_destroy(SignalMutPointerSenderKeyDistributionMessage p);
SignalFfiError *signal_sender_key_distribution_message_clone(SignalMutPointerSenderKeyDistributionMessage *new_obj, SignalConstPointerSenderKeyDistributionMessage obj);
SignalFfiError *signal_sender_key_message_destroy(SignalMutPointerSenderKeyMessage p);
SignalFfiError *signal_sender_key_message_clone(SignalMutPointerSenderKeyMessage *new_obj, SignalConstPointerSenderKeyMessage obj);
SignalFfiError *signal_sender_key_record_destroy(SignalMutPointerSenderKeyRecord p);
SignalFfiError *signal_sender_key_record_clone(SignalMutPointerSenderKeyRecord *new_obj, SignalConstPointerSenderKeyRecord obj);
SignalFfiError *signal_server_certificate_destroy(SignalMutPointerServerCertificate p);
SignalFfiError *signal_server_certificate_clone(SignalMutPointerServerCertificate *new_obj, SignalConstPointerServerCertificate obj);
SignalFfiError *signal_session_record_destroy(SignalMutPointerSessionRecord p);
SignalFfiError *signal_session_record_clone(SignalMutPointerSessionRecord *new_obj, SignalConstPointerSessionRecord obj);
SignalFfiError *signal_message_destroy(SignalMutPointerSignalMessage p);
SignalFfiError *signal_message_clone(SignalMutPointerSignalMessage *new_obj, SignalConstPointerSignalMessage obj);
SignalFfiError *signal_signed_pre_key_record_destroy(SignalMutPointerSignedPreKeyRecord p);
SignalFfiError *signal_signed_pre_key_record_clone(SignalMutPointerSignedPreKeyRecord *new_obj, SignalConstPointerSignedPreKeyRecord obj);
SignalFfiError *signal_kyber_pre_key_record_destroy(SignalMutPointerKyberPreKeyRecord p);
SignalFfiError *signal_kyber_pre_key_record_clone(SignalMutPointerKyberPreKeyRecord *new_obj, SignalConstPointerKyberPreKeyRecord obj);
SignalFfiError *signal_unidentified_sender_message_content_destroy(SignalMutPointerUnidentifiedSenderMessageContent p);
SignalFfiError *signal_kyber_key_pair_destroy(SignalMutPointerKyberKeyPair p);
SignalFfiError *signal_kyber_key_pair_clone(SignalMutPointerKyberKeyPair *new_obj, SignalConstPointerKyberKeyPair obj);
SignalFfiError *signal_kyber_public_key_destroy(SignalMutPointerKyberPublicKey p);
SignalFfiError *signal_kyber_public_key_clone(SignalMutPointerKyberPublicKey *new_obj, SignalConstPointerKyberPublicKey obj);
SignalFfiError *signal_kyber_secret_key_destroy(SignalMutPointerKyberSecretKey p);
SignalFfiError *signal_kyber_secret_key_clone(SignalMutPointerKyberSecretKey *new_obj, SignalConstPointerKyberSecretKey obj);
SignalFfiError *signal_hkdf_derive(SignalBorrowedMutableBuffer output, SignalBorrowedBuffer ikm, SignalBorrowedBuffer label, SignalBorrowedBuffer salt);
SignalFfiError *signal_service_id_service_id_binary(SignalOwnedBuffer *out, const SignalServiceIdFixedWidthBinaryBytes *value);
SignalFfiError *signal_service_id_service_id_string(const char **out, const SignalServiceIdFixedWidthBinaryBytes *value);
SignalFfiError *signal_service_id_service_id_log(const char **out, const SignalServiceIdFixedWidthBinaryBytes *value);
SignalFfiError *signal_service_id_parse_from_service_id_binary(SignalServiceIdFixedWidthBinaryBytes *out, SignalBorrowedBuffer input);
SignalFfiError *signal_service_id_parse_from_service_id_string(SignalServiceIdFixedWidthBinaryBytes *out, const char *input);
SignalFfiError *signal_address_new(SignalMutPointerProtocolAddress *out, const char *name, uint32_t device_id);
SignalFfiError *signal_publickey_deserialize(SignalMutPointerPublicKey *out, SignalBorrowedBuffer data);