lib/src/bindings/libsignal_bindings.dart


@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeyBundle>,
    SignalConstPointerPreKeyBundle,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_bundle_clone(
  ffi.Pointer<SignalMutPointerPreKeyBundle> new_obj,
  SignalConstPointerPreKeyBundle obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerPreKeyRecord)
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_destroy(
  SignalMutPointerPreKeyRecord p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeyRecord>,
    SignalConstPointerPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_record_clone(
  ffi.Pointer<SignalMutPointerPreKeyRecord> new_obj,
  SignalConstPointerPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerPreKeySignalMessage)
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_signal_message_destroy(
  SignalMutPointerPreKeySignalMessage p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeySignalMessage>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_signal_message_clone(
  ffi.Pointer<SignalMutPointerPreKeySignalMessage> new_obj,
  SignalConstPointerPreKeySignalMessage obj,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalMutPointerPrivateKey)>()
external ffi.Pointer<SignalFfiError> signal_privatekey_destroy(
  SignalMutPointerPrivateKey p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPrivateKey>,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_privatekey_clone(
  ffi.Pointer<SignalMutPointerPrivateKey> new_obj,
  SignalConstPointerPrivateKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerProtocolAddress)
>()
external ffi.Pointer<SignalFfiError> signal_address_destroy(
  SignalMutPointerProtocolAddress p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerProtocolAddress>,
    SignalConstPointerProtocolAddress,
  )
>()
external ffi.Pointer<SignalFfiError> signal_address_clone(
  ffi.Pointer<SignalMutPointerProtocolAddress> new_obj,
  SignalConstPointerProtocolAddress obj,
);

@ffi.Native<ffi.Pointer<SignalFfiError> Function(SignalMutPointerPublicKey)>()
external ffi.Pointer<SignalFfiError> signal_publickey_destroy(
  SignalMutPointerPublicKey p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_publickey_clone(
  ffi.Pointer<SignalMutPointerPublicKey> new_obj,
  SignalConstPointerPublicKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSenderCertificate)
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_destroy(
  SignalMutPointerSenderCertificate p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderCertificate>,
    SignalConstPointerSenderCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_certificate_clone(
  ffi.Pointer<SignalMutPointerSenderCertificate> new_obj,
  SignalConstPointerSenderCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalMutPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_destroy(
  SignalMutPointerSenderKeyDistributionMessage p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage>,
    SignalConstPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_clone(
  ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage> new_obj,
  SignalConstPointerSenderKeyDistributionMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSenderKeyMessage)
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_destroy(
  SignalMutPointerSenderKeyMessage p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyMessage>,
    SignalConstPointerSenderKeyMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_clone(
  ffi.Pointer<SignalMutPointerSenderKeyMessage> new_obj,
  SignalConstPointerSenderKeyMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSenderKeyRecord)
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_record_destroy(
  SignalMutPointerSenderKeyRecord p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyRecord>,
    SignalConstPointerSenderKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_record_clone(
  ffi.Pointer<SignalMutPointerSenderKeyRecord> new_obj,
  SignalConstPointerSenderKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerServerCertificate)
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_destroy(
  SignalMutPointerServerCertificate p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerServerCertificate>,
    SignalConstPointerServerCertificate,
  )
>()
external ffi.Pointer<SignalFfiError> signal_server_certificate_clone(
  ffi.Pointer<SignalMutPointerServerCertificate> new_obj,
  SignalConstPointerServerCertificate obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSessionRecord)
>()
external ffi.Pointer<SignalFfiError> signal_session_record_destroy(
  SignalMutPointerSessionRecord p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSessionRecord>,
    SignalConstPointerSessionRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_session_record_clone(
  ffi.Pointer<SignalMutPointerSessionRecord> new_obj,
  SignalConstPointerSessionRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSignalMessage)
>()
external ffi.Pointer<SignalFfiError> signal_message_destroy(
  SignalMutPointerSignalMessage p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSignalMessage>,
    SignalConstPointerSignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_message_clone(
  ffi.Pointer<SignalMutPointerSignalMessage> new_obj,
  SignalConstPointerSignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerSignedPreKeyRecord)
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_destroy(
  SignalMutPointerSignedPreKeyRecord p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSignedPreKeyRecord>,
    SignalConstPointerSignedPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_signed_pre_key_record_clone(
  ffi.Pointer<SignalMutPointerSignedPreKeyRecord> new_obj,
  SignalConstPointerSignedPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerKyberPreKeyRecord)
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_destroy(
  SignalMutPointerKyberPreKeyRecord p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPreKeyRecord>,
    SignalConstPointerKyberPreKeyRecord,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_pre_key_record_clone(
  ffi.Pointer<SignalMutPointerKyberPreKeyRecord> new_obj,
  SignalConstPointerKyberPreKeyRecord obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalMutPointerUnidentifiedSenderMessageContent,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_unidentified_sender_message_content_destroy(
  SignalMutPointerUnidentifiedSenderMessageContent p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerKyberKeyPair)
>()
external ffi.Pointer<SignalFfiError> signal_kyber_key_pair_destroy(
  SignalMutPointerKyberKeyPair p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberKeyPair>,
    SignalConstPointerKyberKeyPair,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_key_pair_clone(
  ffi.Pointer<SignalMutPointerKyberKeyPair> new_obj,
  SignalConstPointerKyberKeyPair obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerKyberPublicKey)
>()
external ffi.Pointer<SignalFfiError> signal_kyber_public_key_destroy(
  SignalMutPointerKyberPublicKey p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberPublicKey>,
    SignalConstPointerKyberPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_public_key_clone(
  ffi.Pointer<SignalMutPointerKyberPublicKey> new_obj,
  SignalConstPointerKyberPublicKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(SignalMutPointerKyberSecretKey)
>()
external ffi.Pointer<SignalFfiError> signal_kyber_secret_key_destroy(
  SignalMutPointerKyberSecretKey p,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerKyberSecretKey>,
    SignalConstPointerKyberSecretKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_kyber_secret_key_clone(
  ffi.Pointer<SignalMutPointerKyberSecretKey> new_obj,
  SignalConstPointerKyberSecretKey obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    SignalBorrowedMutableBuffer,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_hkdf_derive(
  SignalBorrowedMutableBuffer output,
  SignalBorrowedBuffer ikm,
  SignalBorrowedBuffer label,
  SignalBorrowedBuffer salt,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_service_id_service_id_binary(
  ffi.Pointer<SignalOwnedBuffer> out,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> value,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_service_id_service_id_string(
  ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> value,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
  )
>()
external ffi.Pointer<SignalFfiError> signal_service_id_service_id_log(
  ffi.Pointer<ffi.Pointer<ffi.Char>> out,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> value,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_service_id_parse_from_service_id_binary(
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  SignalBorrowedBuffer input,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_service_id_parse_from_service_id_string(
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  ffi.Pointer<ffi.Char> input,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerProtocolAddress>,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError> signal_address_new(
  ffi.Pointer<SignalMutPointerProtocolAddress> out,
  ffi.Pointer<ffi.Char> name,
  int device_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_publickey_deserialize(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalBorrowedBuffer data,
);
